<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              android:weightSum="4">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/icon"
                style="@style/ThemeOverlay.FirebaseIcon"
                android:layout_marginTop="150dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/firebase_logo_and_name"
                android:src="@drawable/note" />

        <TextView
                android:id="@+id/titleText"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/notes"
                android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
                android:textColor="@color/textColor"
                android:id="@+id/status"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/signed_out" />

        <TextView
                android:textColor="@color/textColor"
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                tools:text="Firebase User ID: 123456789abc" />

    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey_100"
            android:gravity="center_vertical">

        <LinearLayout
                android:id="@+id/phoneAuthFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                <EditText
                        android:id="@+id/fieldPhoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:layout_weight="1.0"
                        android:inputType="phone"/>

                <EditText
                        android:id="@+id/fieldVerificationCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/verification_code"
                        android:layout_weight="1.0"
                        android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3.0">

                <Button
                        android:theme="@style/ThemeOverlay.MyDarkButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/buttonStartVerification"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/start"/>

                <Button
                        android:theme="@style/ThemeOverlay.MyDarkButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/buttonVerifyPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/verify"/>

                <Button
                        android:theme="@style/ThemeOverlay.MyDarkButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/buttonResend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/resend"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/signedInButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                android:weightSum="1.0">

            <Button
                    android:id="@+id/signOutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

