<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

    <RelativeLayout
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/priority"
                android:text="@string/_1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/title"
                android:text="@string/title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:maxLines="1"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/description"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_below="@id/title"
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>