<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:padding="2dp"
            android:orientation="vertical"
            tools:context=".ui.AddEditNoteActivity">
        <EditText
                android:id="@+id/title_textview"
                android:hint="@string/title"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:ellipsize="end"
                android:inputType="text"
                android:gravity="center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bottom_border"
                android:maxHeight="50dp"
                android:minHeight="300dp"
                android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:id="@+id/description"
                android:hint="@string/description"
                android:padding="5dp"
                android:gravity="top"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="110dp"
                android:inputType="textMultiLine"
                android:layout_weight="6"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_border"
                android:importantForAutofill="no" tools:targetApi="o"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/priority"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
        <NumberPicker
                android:id="@+id/num_picker"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Switch
                android:id="@+id/pin_to_top"
                android:text="@string/pin_to_top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"/>
    </LinearLayout>
</ScrollView>