<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">
    <TextView
            android:id="@+id/num_res"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="italic"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_toEndOf="@id/num_res"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            android:text="@string/_0_results_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_below="@id/num_res"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/note_item"
    />

    <EditText
            android:padding="10dp"
            android:textColorHint="#80ffffff"
            android:hint="@string/search_for_a_word"
            android:layout_marginBottom="1dp"
            android:textColor="@color/textColor"
            android:id="@+id/search_text"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note"
            android:layout_above="@id/search_text"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentEnd="true"
    />

</RelativeLayout>